--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&display=swap');
-
+body {
+  width: 100%;
+  padding: 0;
+}
 .App {
   text-align: center;
   font-family: 'Barlow Semi Condensed', sans-serif;
