--- a/src/PAdmin/headerAdmin/headerAdmin.css
+++ b/src/PAdmin/headerAdmin/headerAdmin.css
@@ -8,14 +8,14 @@
   background-color: #ffffff;
   position: relative;
   background-color: #e78345;
-  border-bottom: transparent 1px #e78345;
+  border-bottom: solid 2px #e78345;
   border-left: 0px solid #e78345;
   height: 15vh;
 }
 
 .titulo {
   position: absolute;
-  color: #000000;
+  color: #fbfbfb;
   top: 0;
   left: 10%;
   text-transform: uppercase;
@@ -50,7 +50,7 @@
 
 .botonDeslizable {
   position: absolute;
-  top: 0;
+  top: 1vh;
   left: 45vw;
 }
 
@@ -74,7 +74,7 @@
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   width: 180px;
   top: 7vh;
-  left: 43vw;
+  left: 41vw;
   border-radius: 5px;
 }
 
@@ -92,7 +92,7 @@
   background-color: rgba(126, 126, 126, 0.336);
   border-radius: 5px;
   font-size: 18px;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 /* mostrar el menu en hover, se puede cambiar a focus */
