--- a/src/components/Deportes/Futbol.css
+++ b/src/components/Deportes/Futbol.css
@@ -51,3 +51,15 @@
   padding-left: 30px;
   margin-right: 2rem;
 }
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
+}
