--- a/src/components/Form Register/Register.module.css
+++ b/src/components/Form Register/Register.module.css
@@ -152,3 +152,15 @@ input:hover {
   border: solid 2px rgba(255, 0, 0, 0);
   transition: all 0.5s ease;
 }
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
+}
