--- a/src/components/FormLogin/Login.module.css
+++ b/src/components/FormLogin/Login.module.css
@@ -141,3 +141,15 @@
   font-size: 14px;
   margin: 3px;
 }
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
+}
