--- a/src/components/Galeria de imagenes/GaleriaImg.module.css
+++ b/src/components/Galeria de imagenes/GaleriaImg.module.css
@@ -6,12 +6,12 @@
 }
 .galeria {
   margin: auto;
-  min-width: 100%;
+  /* min-width: 100%; */
   width: 100%;
   height: 80vh;
-  border: solid 2px rgba(0, 0, 0, 0);
+  /* border: solid 2px rgba(0, 0, 0, 0); */
   overflow: hidden;
-  /* margin-bottom: 20px; */
+  margin-top: 0px;
   z-index: -1;
 
   /* border-radius: 10px; */
