--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .contenedorGeneral {
   position: absolute;
-  margin-top: 100px;
+  margin-top: -5px;
   z-index: 10;
 }
 
@@ -64,7 +64,19 @@
   color: #e78345;
   transform: scale(1.2);
 }
-
+.quienesSomos h2 {
+  color: #e78345;
+  font-size: 40px;
+  letter-spacing: 2px;
+}
+.quienesSomos p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 80%;
+  text-align: justify;
+}
 /*BOTONES*/
 button {
   display: flex;
@@ -216,4 +228,16 @@ button:after {
   margin-top: 20px;
   width: 100%;
   height: 700px;
+}
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
 }
