--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -223,3 +223,15 @@ hr {
   backdrop-filter: blur(9px);
   margin-left: -20px;
 }
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
+}
