--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -6,33 +6,48 @@
 
   width: 90%;
   height: 100vh; */
-  width: 100%;
-  height: 800px;
+  width: 50%;
+  height: 60%;
+  margin: auto;
   background: #fff;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-left: 4%;
   border-right: 4%;
   display: grid;
-  padding-bottom: 0px;
-  border-radius: 20px 20px;
-  align-items: center;
+  /* padding-bottom: 0px; */
+  /* border-radius: 20px 20px; */
+  /* align-items: center; */
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
-.modalEdit{
+.modalEdit {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
 }
-
-.h5{
+.modalEdit .selectPhoto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 10px;
+}
+.fotoDefault {
+  margin: auto;
+  margin-top: 20px;
+}
+.h5 {
   margin-top: 1px;
   margin-bottom: 1px;
 }
 
-.fotoDePefil{
+.fotoDePefil {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 30px;
 }
 .tituloPerfil {
   font-size: 40px;
@@ -47,7 +62,7 @@
   width: 250px;
   height: 250px;
 
-  position:static;
+  position: static;
   top: 30vh;
   left: 2vw;
   border-radius: 50%;
@@ -101,11 +116,12 @@
   margin: auto;
   width: 33%;
   height: 70%;
-  text-align: justify;
+  text-align: center;
 }
 .datosDeUsuario .datosTutor h1 {
   margin-bottom: -15px;
   text-shadow: 5px 5px 5px grey;
+  margin-left: -30px;
 }
 .datosDeUsuario .datosTutor h2 {
   margin-bottom: -20%;
