--- a/src/components/SeccionFotos/Fotos.module.css
+++ b/src/components/SeccionFotos/Fotos.module.css
@@ -43,3 +43,15 @@
     width: 50%;
   }
 }
+
+/* -------------------------LOADER------------------------- */
+
+.loader {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 22%;
+}
