--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -120,7 +120,7 @@
 .botonDeslizable {
   position: absolute;
 
-  color: rgb(0, 0, 0);
+  color: #fff;
   padding: 0px;
   font-size: 30px;
   border: none;
@@ -140,10 +140,15 @@
   width: 20px;
   height: 20px;
 }
+
+.flechita {
+  width: 50px;
+  height: 50px;
+}
 .dropdown {
   position: relative;
   display: inline-block;
-  top: -0vh;
+  top: -2vh;
   left: 40vw;
   color: red;
 }
