filtros terminados (actions y reducer modificados correctamente)

--- a/src/components/Deportes/Futbol.css
+++ b/src/components/Deportes/Futbol.css
@@ -11,6 +11,15 @@
   background-repeat: no-repeat;
   background-position: center;
 }
+.sportCardContainer{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: auto;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .h2 {
   background-color: white;
   color: black;
