--- a/src/PAdmin/Profile.module.css
+++ b/src/PAdmin/Profile.module.css
@@ -37,3 +37,37 @@ a:focus {
 .mostrar {
   width: 100%;
 }
+.manu {
+  margin-bottom: 10px;
+}
+.titulo {
+  font-size: 13px;
+  color: rgb(187, 186, 186);
+}
+
+.lista {
+  list-style: none;
+  padding: 5px;
+}
+
+.item {
+  padding: 5px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.item.active,
+.item:hover {
+  background-color: rgb(240, 240, 255);
+}
+
+.icon{
+    margin-right: 5px;
+    font-size: 20px !important;
+}
+.link{
+  text-decoration: none;
+  color: inherit;
+}
