--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -257,7 +257,13 @@ background-color: black;
   width: 100%;
   height: 50%;
 }
+.titNewsletters{
+  color: #e78345;
+}
+.inputNewsLetters{
+  text-align: center;
 
+}
 /* -------------------------LOADER------------------------- */
 
 .loader {
