--- a/src/PAdmin/AddImages/AddAlbum.css
+++ b/src/PAdmin/AddImages/AddAlbum.css
@@ -2,6 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: auto;
+    margin-top: 50px;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.407);
+    background-color:#e783455e;
+    width: 50%;
+}
+.tituloCrearAlbum{
+    font-size: 30px;
+    text-transform: uppercase;
 }
 
 .creaAlbum{
@@ -13,6 +22,6 @@
 }
 
 .espacio2{
-    width: 120%;
-    height: 150px;
+    width: 100%;
+    resize: none;
 }
