--- a/src/PAdmin/AddImages/AddImages.css
+++ b/src/PAdmin/AddImages/AddImages.css
@@ -11,12 +11,30 @@
     width: 200px;
     object-fit: cover;
     margin: 16px;
+    border: solid 1px black;
 }
 
 .photo{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: auto;
+    margin-top: 50px;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.407);
+    background-color:#e783455e;
+    width: 30%;
+    height: 500px;
+}
+.tituloAgregarFoto{
+    font-size: 30px;
+    text-transform: uppercase;
+}
+
+.select{
+    width: 100%;
+    text-align: center;
+    height: 20px;
+    font-weight: 700;
 }
 
 .agregarphoto{
