--- a/src/components/Form CrearNoticia/CrearNoticia.module.css
+++ b/src/components/Form CrearNoticia/CrearNoticia.module.css
@@ -2,18 +2,22 @@
   text-transform: uppercase;
   font-size: 40px;
 }
-
+.imagen{
+  border: solid 1px black;
+}
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: auto;
-  border: solid 4px black;
+  background-color:#e783455e;
   border-radius: 10px;
   width: 40%;
   height: 100%;
   padding-top: 20px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.407);
+  margin-top: 50px;
 }
 .form .inputName {
   width: 40%;
