--- a/src/components/Form Create Activities/NewActivity.module.css
+++ b/src/components/Form Create Activities/NewActivity.module.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
    
    
 }
@@ -18,15 +19,16 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    border: double 4px black;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.407);
     border-radius: 3%;
     width: 50%;
     height: fit-content;
     padding-top: 20px;
-    background-color: rgb(177, 177, 177);
+    background-color:#e783455e;
   }  
 
   .Form{
+
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -69,9 +71,9 @@
   }
   .errors{
     color: black;
-    font-size: 11px;
+    font-size: 15px;
    text-decoration: underline;
-   text-decoration-color: red;
+  color: red;
    
   }
   
