--- a/src/navbar/NavBar.css
+++ b/src/navbar/NavBar.css
@@ -185,6 +185,8 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  min-height: 25px;
+  min-width: 110px;
 }
 
 /* cambiar el color en hover */
